# CircuitPython_AXP313A

./: .gitignore  .pre-commit-config.yaml  AXP313A.py  LICENSE  README.md  README.rst  README.rst.license  axp313a.py  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  index.rst  index.rst.license
examples/: axp313a_simpletest.py
