# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Bill Sideris for Feline Computers
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-axp313a"
description = "A CircuitPython module for managing the AXP313A pmic over I2C, along with the common voltages to power cameras with it."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Feline Computers", email = "bill88t@feline.gr"}
]
urls = {Homepage = "https://github.com/bill88t/CircuitPython_AXP313A"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "axp313a",
    "AXP313A",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["axp313a"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
